--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "copy": "node script/copy.js",
     "test": "mocha --require babel-polyfill --require babel-register",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
