1.change resposity name 2.change version 3.add travis info

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reaction-obsevable",
-  "version": "0.1.3",
+  "name": "miniprogram-reactive",
+  "version": "0.0.1",
   "description": "reaction javasctipt project",
   "main": "index.js",
   "directories": {
