--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "hopperhuang",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hopperhuang/reaction.git"
+    "url": "https://github.com/hopperhuang/miniprogram-reactive.git"
   },
   "license": "ISC",
   "devDependencies": {
@@ -29,6 +29,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
+    "j-component": "0.0.1",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0"
   }
