--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "node scripts/build.js",
     "dev": "node scripts/develop.js",
     "copy": "node scripts/copy.js",
-    "test": "mocha --require @babel/polyfill --require @babel/register",
+    "test": "mocha --require @babel/polyfill --require @babel/register -r jsdom-global/register",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "hopperhuang",
@@ -27,6 +27,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "colors": "^1.3.2",
     "coveralls": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
@@ -35,6 +36,8 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "j-component": "0.0.2",
+    "jsdom": "12.1.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0",
     "rollup": "^0.66.2",
@@ -42,6 +45,9 @@
     "rollup-plugin-cleanup": "^3.0.0",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-uglify": "^6.0.0"
+    "rollup-plugin-uglify": "^6.0.0",
+    "through2": "^2.0.3",
+    "webpack": "^4.20.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
